--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.gnyrfta.david.audiotracklooper.MyApp">
+        android:name="com.gnyrfta.david.audiotracklooper.MyApp"
+        >
 
-        <activity android:name="com.gnyrfta.david.audiotracklooper.MainActivity">
+        <activity android:name="com.gnyrfta.david.audiotracklooper.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
