--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.gnyrfta.david.audiotracklooper"
+        applicationId "com.gnyrfta.david.looperdevelopment"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 1
+        versionCode 2
         versionName "1.0"
     }
     buildTypes {
