--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gnyrfta.david.audiotracklooper">
+    package="com.gnyrfta.david.looperdevelopment">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="18"/>
@@ -10,10 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.gnyrfta.david.audiotracklooper.MyApp"
+        android:name="com.gnyrfta.david.looperdevelopment.MyApp"
         >
 
-        <activity android:name="com.gnyrfta.david.audiotracklooper.MainActivity"
+        <activity android:name="com.gnyrfta.david.looperdevelopment.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
