--- a/gnyrftalibrary/build.gradle
+++ b/gnyrftalibrary/build.gradle
@@ -1,14 +1,13 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.gnyrfta.david.looperdevelopment"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 2
+        versionCode 1
         versionName "1.0"
     }
     buildTypes {
@@ -20,9 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
-    compile project(':gnyrftalibrary')
 }
